# ShanQuan

./: LICENSE  README.md  pyproject.toml
example/: 0-example.py  1-hello-world.py  2-reason-act.py  3-ctx_kwargs.py  4-manual-batch.py
src/: shanquan.py
